crates/libs/frieze-macros/tests/ui/option_of_maybe.rs
use frieze::Schema;
use frieze_model::Maybe;

#[derive(Schema)]
struct S {
    x: Option<Maybe<String>>,
}

fn main() {}
